:boom::tada: Support for continuous and discrete variables added. Swagger updated
